[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernel_writer"
version = "1.0.0"
description = "OpenEnv-compatible CUDA kernel optimization environment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.112.0",
  "pydantic>=2.7.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "anthropic>=0.25.0",
  "gradio>=4.0.0",
  "flask>=3.0.0",
  "pyyaml>=6.0.0",
  "numpy>=1.24.0",
  "jinja2>=3.1.2",
  "pytest>=7.4.0"
]

[project.scripts]
server = "server.app:main"
