[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernel_writer"
version = "1.0.0"
description = "OpenEnv-compatible CUDA kernel optimization environment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "pydantic>=2.0.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "openenv-core==0.1.1",
  "gradio>=4.0.0",
  "huggingface-hub==0.25.2",
  "audioop-lts>=0.2.2; python_version >= '3.13'"
]

[project.scripts]
server = "server.app:main"
