[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernel_writer"
version = "1.0.0"
description = "OpenEnv-compatible CUDA kernel optimization environment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.112.2",
  "starlette==0.37.2",
  "uvicorn==0.30.6",
  "pydantic==2.10.6",
  "openai==1.51.2",
  "httpx==0.27.2",
  "python-dotenv==1.0.1",
  "openenv-core==0.1.1",
  "gradio==4.44.1",
  "gradio-client==1.3.0",
  "huggingface-hub==0.25.2",
  "jinja2==3.1.4",
  "markupsafe==2.1.5",
  "websockets==12.0",
  "requests>=2.31.0",
  "audioop-lts>=0.2.2; python_version >= '3.13'"
]

[project.scripts]
server = "server.app:main"
